# DIE-LOGIK-UND-DIE-MATRIX

./: .env.example  .gitignore  BRAIN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  LICENSE-BOOKS  Makefile  README.md  SECURITY.md  blackbook-undercover.md  briefing-google-antigravity.md  briefing-master-x.md  cocreation.md  community-gdg.md  epilog.md  evolution.md  glossar.md  investor-briefing.md  konzil-protokoll.md  learning-pathway.md  llms.txt  logik.md  loop-zyklus.md  matrix.md  pyproject.toml  requirements.txt  strategiebericht-phase-2.md  strategiebriefing-universe-me.md  universe.md  vorwort.md
.agents/: AGENTS.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/local-bridge/: main.py
books/handbuch-omm/: README.md  metadata.json
books/handbuch-omm/chapters/: 00_preamble.md  01_codex.md  02_brainstormer.md  03_prompt_engineering.md  04_stufen_workflow.md  05_compliance.md  06_roadmap.md  07_measurement.md  08_brand_voice.md  09_channel_playbooks.md  10_content_authenticity.md  11_competitor_intelligence.md  12_crisis_management.md  13_glossary.md  14_prompt_templates.md
books/sovereign-handbook/: README.md  metadata.json
books/sovereign-handbook/chapters/: 01_vision.md  02_architecture.md  03_android_setup.md  04_uiux_compose.md  05_backend_gcp.md  06_agent_brain.md  07_agents_nodes.md  08_sensing_layer.md  09_monetization_payment.md  10_security_hitl.md  11_datamodel_push.md  12_testing_deployment.md  13_legal_roadmap.md  14_appendix.md
books/undercover-blackbook/: README.md  metadata.json
docs/adr/: 0001-projektstruktur-und-technologiestack.md
gcp-infra/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_api.py
(+26 files in other folders)
