[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "die-logik-und-die-matrix"
version = "1.1.0"
description = "Das Blackbook des Projekts UNIVERSE M.E. & Buch INFINITY — Die DNA der Cocreationsmatrix fuer Entwickler, KI-Agenten & Interface Infinity."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "yoyo967", email = "yildirimyahya716@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
]
keywords = [
    "ai-agents",
    "fastapi",
    "open-source",
    "berlin",
    "governance",
    "eu-ai-act",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yoyo967/DIE-LOGIK-UND-DIE-MATRIX"
Repository = "https://github.com/yoyo967/DIE-LOGIK-UND-DIE-MATRIX"
Bug-Tracker = "https://github.com/yoyo967/DIE-LOGIK-UND-DIE-MATRIX/issues"
Changelog = "https://github.com/yoyo967/DIE-LOGIK-UND-DIE-MATRIX/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
